--- a/app/src/main/res/layout/activity_reverse.xml
+++ b/app/src/main/res/layout/activity_reverse.xml
@@ -3,44 +3,32 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
-    android:paddingBottom="30dp"
-    android:paddingTop="10dp"
-    android:paddingLeft="30dp"
-    android:paddingRight="30dp"
-    tools:context="com.vinhgroup.numbertransfer.View.Test.TestResuiltActivity">
+    android:orientation="vertical"
+    tools:context="com.vinhgroup.numbertransfer.View.Transfer.TransferActivity">
 
     <ListView
-        android:layout_weight="2"
         android:id="@+id/lv"
         android:layout_width="wrap_content"
-        android:layout_height="0dp">
-    </ListView>
+        android:layout_height="0dp"
+        android:layout_weight="2.5"></ListView>
 
     <LinearLayout
-        android:gravity="center"
         android:orientation="vertical"
-        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="0dp">
+        android:layout_height="0dp"
+        android:layout_weight="1">
         <Button
-            android:id="@+id/button_re_choosen"
-            android:text="Chọn lại"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <Button
-            android:id="@+id/button_transfer_resuilt"
             android:text="Chuyển đổi"
+            android:id="@+id/button_transfer"
+            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <Button
-            android:id="@+id/button_back_to_home_resuilt"
-            android:text="Trang chủ"
+            android:text="Về trang chủ"
+            android:id="@+id/button_back_to_home"
+            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
-
-
-
 </LinearLayout>
