--- a/app/src/main/res/layout/custom_test_resuilt.xml
+++ b/app/src/main/res/layout/custom_test_resuilt.xml
@@ -7,19 +7,19 @@
     <TextView
         android:text="name"
         android:id="@+id/name"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <TextView
         android:text="phone_number"
         android:id="@+id/phone_number"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <TextView
         android:text="new_phone_number"
         android:id="@+id/new_phone_number"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
 
