--- a/app/src/main/res/layout/custom_test_resuilt.xml
+++ b/app/src/main/res/layout/custom_test_resuilt.xml
@@ -1,26 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:gravity="center_vertical"
+    android:padding="@dimen/_10sdp">
 
-    <TextView
-        android:text="name"
-        android:id="@+id/name"
-        android:layout_width="match_parent"
+    <CheckBox
+        android:id="@+id/check_box_select"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <TextView
-        android:text="phone_number"
-        android:id="@+id/phone_number"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:layout_marginLeft="@dimen/_10sdp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-    <TextView
-        android:text="new_phone_number"
-        android:id="@+id/new_phone_number"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="name" />
+
+        <TextView
+            android:id="@+id/phone_number"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="phone_number" />
+
+        <TextView
+            android:id="@+id/new_phone_number"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="new_phone_number" />
+    </LinearLayout>
 
 
 </LinearLayout>
