--- a/app/src/main/res/layout/activity_transfer.xml
+++ b/app/src/main/res/layout/activity_transfer.xml
@@ -11,7 +11,7 @@
     <CheckBox
         android:id="@+id/check_box_all"
         android:text="Chọn tất cả"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <ListView
