--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,52 +4,64 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:orientation="vertical"
+    android:gravity="center"
     tools:context="com.vinhgroup.numbertransfer.View.Home.MainActivity">
 
 
     <LinearLayout
-        android:padding="20dp"
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_centerInParent="true"
         android:gravity="center"
         android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:padding="20dp">
 
         <Button
             android:id="@+id/button_guide"
-            android:text="Hướng dẫn sử dụng"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="Hướng dẫn sử dụng" />
 
         <Button
             android:id="@+id/button_transfer"
-            android:text="Chuyển đổi 11 số sang 10 số"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="Chuyển đổi 11 số sang 10 số" />
 
         <Button
             android:id="@+id/button_return"
-            android:text="chuyển đổi ngược 10 số sang 11"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="chuyển đổi ngược 10 số sang 11" />
 
         <Button
-            android:visibility="gone"
             android:id="@+id/button_information"
-            android:text="Thông tin chuyển đổi"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="Thông tin chuyển đổi"
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/exit"
-            android:text="Thoát app"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="Thoát app" />
 
     </LinearLayout>
 
 
+    <include
+        android:layout_marginBottom="@dimen/_10sdp"
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/ads_bar"
+        layout="@layout/ads_bar"
+        android:layout_alignParentBottom="true">
+
+    </include>
 
 
 </LinearLayout>
