--- a/app/src/main/res/layout/activity_test_resuilt.xml
+++ b/app/src/main/res/layout/activity_test_resuilt.xml
@@ -5,10 +5,9 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    android:paddingBottom="30dp"
-    android:paddingTop="10dp"
-    android:paddingLeft="30dp"
-    android:paddingRight="30dp"
+    android:paddingTop="@dimen/_10sdp"
+    android:paddingLeft="@dimen/_10sdp"
+    android:paddingRight="@dimen/_10sdp"
     tools:context="com.vinhgroup.numbertransfer.View.Test.TestResuiltActivity">
 
     <ListView
