--- a/app/src/main/res/layout/activity_transfer.xml
+++ b/app/src/main/res/layout/activity_transfer.xml
@@ -5,40 +5,59 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="10dp"
+    android:gravity="center"
+    android:paddingLeft="@dimen/_10sdp"
+    android:paddingRight="@dimen/_10sdp"
     tools:context="com.vinhgroup.numbertransfer.View.Transfer.TransferActivity">
 
-    <CheckBox
-        android:id="@+id/check_box_all"
-        android:text="Chọn tất cả"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <ListView
-        android:id="@+id/lv"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="2.5"></ListView>
-
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="vertical"
-        android:padding="10dp">
-
-        <Button
-            android:id="@+id/button_transfer"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp">
+        <CheckBox
+            android:id="@+id/check_box_all"
+            android:text="Chọn tất cả"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Chuyển đổi" />
+            android:layout_height="wrap_content" />
 
-        <Button
-            android:id="@+id/button_back_to_home"
+        <ListView
+            android:id="@+id/lv"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="2.5"></ListView>
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Về trang chủ" />
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:paddingTop="@dimen/_5sdp"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/button_transfer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Chuyển đổi" />
+
+            <Button
+                android:id="@+id/button_back_to_home"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Về trang chủ" />
+        </LinearLayout>
     </LinearLayout>
+
+
+    <include
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/ads_bar"
+        layout="@layout/ads_bar"
+        android:layout_alignParentBottom="true">
+
+    </include>
+
 </LinearLayout>
