--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -40,6 +40,7 @@
             android:visibility="gone" />
 
         <Button
+            android:visibility="gone"
             android:id="@+id/button_test"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
